--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,28 +1,37 @@
-
 <mat-card>
-    <mat-toolbar color="primary">
-        Cursos Disponíveis
-    </mat-toolbar>
-
+  <mat-toolbar color="primary">
+    Cursos Disponíveis
+  </mat-toolbar>
+  <!--*ngIf usado para verificar se o observable retorna algo ou não
+  se não retornar nada ele exibe outro HTML no lugar da tabela-->
+  <div *ngIf="courses$ | async as courses; else loading">
     <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Curso </th>
-          <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-        </ng-container>
-      
-        <!-- Category Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef> Categoria </th>
-          <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Curso </th>
+        <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
+      </ng-container>
 
-      </table>
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Categoria </th>
+        <td mat-cell *matCellDef="let course"> {{ course.category }} 
+          <mat-icon aria-hidden="false" aria-label="Categoria do curso">{{ course.category | category }}</mat-icon>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    </table>
+  </div>
+
+  <!--Caso o observable retornar falso, exibe o spinner-->
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
+
 </mat-card>
-
-  
-  
