--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -1,1 +1,31 @@
-<p>course-form works!</p>
+<mat-card>
+    <mat-toolbar color="primary">Adicionar Curso</mat-toolbar>
+
+    <mat-card-content>
+        <form [formGroup]="form" class="min-width">
+            <mat-form-field class="full-width">
+                <input matInput placeholder="Nome" formControlName="name">
+            </mat-form-field>
+
+            <mat-form-field class="full-width">
+                <mat-label>Categoria</mat-label>
+                <mat-select formControlName="category">
+                    <mat-option value="null"></mat-option>
+                    <mat-option value="front-end">Front-End</mat-option>
+                    <mat-option value="back-end">Back-End</mat-option>
+                  </mat-select>
+            </mat-form-field>
+        </form>
+    </mat-card-content>
+
+    <mat-card-actions>
+        <button mat-raised-button color="primary" (click)="onSubmit()">
+            <mat-icon>save</mat-icon>
+            Salvar
+        </button>
+
+        <button mat-raised-button (click)="onCancel()" color="warn">
+            <mat-icon>cancel</mat-icon>
+            Cancelar</button>
+    </mat-card-actions>
+</mat-card>
