--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -3,13 +3,15 @@
 
     <mat-card-content>
         <form [formGroup]="form" class="min-width">
-            <mat-form-field class="full-width">
+            
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Nome</mat-label>
                 <input matInput placeholder="Nome" formControlName="name">
             </mat-form-field>
 
-            <mat-form-field class="full-width">
-                <mat-label>Categoria</mat-label>
-                <mat-select formControlName="category">
+            <mat-form-field appearance="outline" class="full-width">
+                <!-- <mat-label>Categoria</mat-label> -->
+                <mat-select formControlName="category" placeholder="Categoria">
                     <mat-option value="null"></mat-option>
                     <mat-option value="front-end">Front-End</mat-option>
                     <mat-option value="back-end">Back-End</mat-option>
@@ -19,12 +21,12 @@
     </mat-card-content>
 
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="onSubmit()">
+        <button mat-raised-button color="primary" (click)="onSubmit()" class="button-save">
             <mat-icon>save</mat-icon>
             Salvar
         </button>
 
-        <button mat-raised-button (click)="onCancel()" color="warn">
+        <button mat-raised-button (click)="onCancel()" color="warn" class="button-cancel">
             <mat-icon>cancel</mat-icon>
             Cancelar</button>
     </mat-card-actions>
