--- a/src/app/courses/course-form/course-form.component.scss
+++ b/src/app/courses/course-form/course-form.component.scss
@@ -1,7 +1,11 @@
 mat-card {
-    max-width: 80%;
+    max-width: 50%;
     margin: 2em auto;
     text-align: center;
+    border-radius: 10px;
+}
+mat-card-content {
+    padding-top: 10px;
 }
 
 .full-width {
@@ -11,4 +15,26 @@ mat-card {
 .min-width {
     width: 100%;
     min-width: 150px;
+}
+
+.button-save {
+    border-radius: 10px;
+    height: 50px;
+    width: 150px;
+}
+
+.button-save:hover {
+    transform:scale(1.1);
+    background-color: #2E279D;
+}
+
+.button-cancel {
+    border-radius: 10px;
+    height: 50px;
+    width: 150px;
+}
+
+.button-cancel:hover {
+    background-color: #FB1B0A;
+    transform:scale(1.1);
 }
