--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+
 @import '@angular/material/theming';
 @include mat-core();
 
@@ -9,6 +9,25 @@ $custom-app-warn: mat-palette($mat-red);
 $custom-theme: mat-light-theme($custom-app-primary, $custom-app-secondary, $custom-app-warn);
 
 @include angular-material-theme($custom-theme);
+
+
+// @import '@angular/material/theming';
+// @include mat-core();
+
+// $custom-app-primary: mat-palette($mat-blue);
+// $custom-app-secondary: mat-palette($mat-indigo, A200, A400, 700);
+// $custom-app-warn: mat-palette($mat-red);
+
+// $custom-app-primary-dark: mat-palette($mat-purple, A200);
+// $custom-app-secondary-dark: mat-palette($mat-green, A200, A400, 700);
+// $custom-app-warn-dark: mat-palette($mat-red);
+
+// $custom-theme: mat-light-theme($custom-app-primary, $custom-app-secondary, $custom-app-warn);
+// $custom-theme-dark: mat-dark-theme($custom-app-primary-dark, $custom-app-secondary-dark, $custom-app-warn-dark);
+
+// @include angular-material-theme($custom-theme-dark);
+
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
