--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -24,7 +24,7 @@
 
       <mat-cell *matCellDef="let course" class="action-column">
         <button class="button-icon" mat-icon-button color="primary" aria-label="Editar curso">
-          <mat-icon>edit</mat-icon>
+          <mat-icon (click)="onEdit(course)">edit</mat-icon>
         </button>
 
         <button class="button-icon" mat-icon-button color="warn" aria-label="Remover curso">
