--- a/src/app/courses/course-form/course-form.component.html
+++ b/src/app/courses/course-form/course-form.component.html
@@ -15,6 +15,7 @@
                     <mat-option value="null"></mat-option>
                     <mat-option value="front-end">Front-End</mat-option>
                     <mat-option value="back-end">Back-End</mat-option>
+                    <mat-option value="mobile">Mobile</mat-option>
                   </mat-select>
             </mat-form-field>
         </form>
