--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -5,6 +5,10 @@ mat-card {
   border-radius: 10px;
 }
 
+mat-toolbar {
+  font-size: 25px;
+}
+
 .column-flex {
   display: flex;
   flex-direction: column;
