--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -10,7 +10,7 @@
     <ng-container matColumnDef="category">
       <mat-header-cell *matHeaderCellDef> Categoria </mat-header-cell>
       <mat-cell *matCellDef="let course"> {{ course.category }}
-        <mat-icon aria-hidden="false" aria-label="Categoria do curso">{{ course.category | category }}</mat-icon>
+        <mat-icon class="icon-category" aria-hidden="false" aria-label="Categoria do curso">{{ course.category | category }}</mat-icon>
       </mat-cell>
     </ng-container>
 
